--- a/L1_files.ipynb
+++ b/L1_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,17 +25,19 @@
       "- 1 lb chicken breast, diced\n",
       "- 2 cups broccoli florets\n",
       "- 1 cup rice\n",
+      "- 2 cups water\n",
       "- 2 tbsp soy sauce\n",
       "- 1 tbsp olive oil\n",
       "- 1 garlic clove, minced\n",
       "- Salt and pepper to taste\n",
       "\n",
       "**Instructions:**\n",
-      "1. Cook rice according to package instructions.\n",
-      "2. Heat olive oil in a pan over medium heat. Add garlic and sauté for 1 minute.\n",
+      "1. Cook rice in 2 cups of water according to package instructions.\n",
+      "2. Heat olive oil in a pan over medium heat. Add garlic and sauté until fragrant.\n",
       "3. Add diced chicken to the pan, season with salt and pepper, and cook until no longer pink.\n",
-      "4. Add broccoli florets and soy sauce. Stir-fry until broccoli is tender.\n",
-      "5. Serve chicken and broccoli over cooked rice. Enjoy!\n"
+      "4. Add broccoli florets and stir-fry until tender.\n",
+      "5. Pour in soy sauce and mix well.\n",
+      "6. Serve chicken and broccoli stir-fry over cooked rice.\n"
      ]
     }
    ],
@@ -206,7 +208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -220,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
